--- a/galerie.html
+++ b/galerie.html
@@ -1,52 +1,7 @@
-<!DOCTYPE html>
-<html lang="cs">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Penzion u vody (standardní obtížnost)</title>
-
-	<!-- Google Fonts: Raleway 400, Open Sans 400(i)/700(i) -->
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Raleway&display=swap" rel="stylesheet">
-
-	<!-- Naše vlastní CSS -->
-	<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-	<div class="wrapper">
-
-		<header class="header">
-			<div class="header__contact">
-				<a class="header__contact-email" href="mailto:penzion@uvody.cz">penzion@uvody.cz</a>
-				<span class="header__contact-phone">Tel. +420 123 456 789</span>
-			</div>
-
-			<div class="header__inner">
-				<div class="header__left">
-					<div class="header__logo">Penzion u vody</div>
-
-					<div class="header__address">
-						<img class="header__stars" src="images/3stars.svg" alt="3 hvězdičky">
-						Ulice 42, Městečko
-					</div>
-				</div>
-
-				<nav class="menu">
-					<ul class="menu__list">
-						<li class="menu__item"><a href="index.html" class="menu__link">Úvod</a></li>
-						<li class="menu__item"><a href="pokoje.html" class="menu__link">Pokoje</a></li>
-						<li class="menu__item"><a href="vybaveni.html" class="menu__link">Vybavení</a></li>
-						<li class="menu__item"><a href="galerie.html" class="menu__link">Galerie</a></li>
-						<li class="menu__item"><a href="kontakt.html" class="menu__link">Kontakt</a></li>
-					</ul>
-				</nav>
-			</div>
-
-			<div class="header__image"></div>
-		</header>
-
-
-		<main class="main">
+---
+layout: sablona.njk
+title: Galerie
+---
 		<!-- ↑↑↑ odtud nahoru je vrchní část společná pro všechny stránky na webu -->
 
 
@@ -56,21 +11,21 @@
 				<h1>Galerie</h1>
 
 				<div class="gallery__grid">
-					<img class="gallery__item" src="images/galerie01.jpg" alt="">
-					<img class="gallery__item" src="images/galerie02.jpg" alt="">
-					<img class="gallery__item" src="images/galerie03.jpg" alt="">
-					<img class="gallery__item" src="images/galerie04.jpg" alt="">
+					<img class="gallery__item" src="/images/galerie01.jpg" alt="">
+					<img class="gallery__item" src="/images/galerie02.jpg" alt="">
+					<img class="gallery__item" src="/images/galerie03.jpg" alt="">
+					<img class="gallery__item" src="/images/galerie04.jpg" alt="">
 					<img class="gallery__item" src="images/galerie05.jpg" alt="">
-					<img class="gallery__item" src="images/galerie06.jpg" alt="">
-					<img class="gallery__item" src="images/galerie07.jpg" alt="">
-					<img class="gallery__item" src="images/galerie08.jpg" alt="">
-					<img class="gallery__item" src="images/galerie09.jpg" alt="">
-					<img class="gallery__item" src="images/galerie10.jpg" alt="">
-					<img class="gallery__item" src="images/galerie11.jpg" alt="">
-					<img class="gallery__item" src="images/galerie12.jpg" alt="">
-					<img class="gallery__item" src="images/galerie13.jpg" alt="">
-					<img class="gallery__item" src="images/galerie14.jpg" alt="">
-					<img class="gallery__item" src="images/galerie15.jpg" alt="">
+					<img class="gallery__item" src="/images/galerie06.jpg" alt="">
+					<img class="gallery__item" src="/images/galerie07.jpg" alt="">
+					<img class="gallery__item" src="/images/galerie08.jpg" alt="">
+					<img class="gallery__item" src="/images/galerie09.jpg" alt="">
+					<img class="gallery__item" src="/images/galerie10.jpg" alt="">
+					<img class="gallery__item" src="/images/galerie11.jpg" alt="">
+					<img class="gallery__item" src="/images/galerie12.jpg" alt="">
+					<img class="gallery__item" src="/images/galerie13.jpg" alt="">
+					<img class="gallery__item" src="/images/galerie14.jpg" alt="">
+					<img class="gallery__item" src="/images/galerie15.jpg" alt="">
 				</div>
 			</section>
 			<!-- konec .gallery -->
